--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,32 +14,32 @@ option(USE_SUPERBUILD "flag that a superbuild should be invoked" ON)
 message(STATUS "SUPERBUILD IS ${USE_SUPERBUILD}")
 
 if (USE_SUPERBUILD)
-    project(superbuild VERSION 1.0)
+  project(superbuild VERSION 1.0)
 
-    # FLAG THE LOCAL BUILD SYSTEM
-    message(STATUS "THE LOCAL BUILD SYSTEM NAME IS : ${CMAKE_SYSTEM_NAME}")
-    if(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
-        set(LINUX_BUILD ON)
-        message(STATUS  "LINUX_BUILD is starting")
-    elseif(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
-        set(MACOS_BUILD ON)
-        message(STATUS  "MACOS_BUILD is starting")
-    elseif((${CMAKE_SYSTEM_NAME} MATCHES "Windows") AND MINGW)
-        set(WINDOWS_BUILD ON)
-        message(STATUS  "WINDOWS_BUILD is starting")
-    else()
-        message(FATAL_ERROR
-    "The build is only configured for Linux, Windows(MINGW), and Darwin(Macos)."
-        )
-    endif()
-    # Set pre_build user parameters
-    set(DEPS_INSTALL_PREFIX "${PROJECT_BINARY_DIR}/../external_lib")
-    set(DEPS_DOWNLOAD_DIR "${PROJECT_BINARY_DIR}/../external_download")
-    set(DEPS_BUILD_DIR "${PROJECT_BINARY_DIR}/../external_build")
+  # FLAG THE LOCAL BUILD SYSTEM
+  message(STATUS "THE LOCAL BUILD SYSTEM NAME IS : ${CMAKE_SYSTEM_NAME}")
+  if(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
+    set(LINUX_BUILD ON)
+    message(STATUS  "LINUX_BUILD is starting")
+  elseif(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
+    set(MACOS_BUILD ON)
+    message(STATUS  "MACOS_BUILD is starting")
+  elseif((${CMAKE_SYSTEM_NAME} MATCHES "Windows") AND MINGW)
+    set(WINDOWS_BUILD ON)
+    message(STATUS  "WINDOWS_BUILD is starting")
+  else()
+    message(FATAL_ERROR
+  "The build is only configured for Linux, Windows(MINGW), and Darwin(Macos)."
+    )
+  endif()
+  # Set pre_build user parameters
+  set(DEPS_INSTALL_PREFIX "${PROJECT_BINARY_DIR}/../external_lib")
+  set(DEPS_DOWNLOAD_DIR "${PROJECT_BINARY_DIR}/../external_download")
+  set(DEPS_BUILD_DIR "${PROJECT_BINARY_DIR}/../external_build")
 
-    message(STATUS "THE LOCAL BUILD SYSTEM NAME IS : ${CMAKE_SYSTEM_NAME}")
-    add_subdirectory(config/cmake/SuperBuildLinux)
-    return()
+  message(STATUS "THE LOCAL BUILD SYSTEM NAME IS : ${CMAKE_SYSTEM_NAME}")
+  add_subdirectory(config/cmake/SuperBuildLinux)
+  return()
 endif(USE_SUPERBUILD)
 
 
@@ -54,15 +54,15 @@ project(lapkt VERSION 2.0)
 # FLAG THE LOCAL BUILD SYSTEM
 message(STATUS "THE LOCAL BUILD SYSTEM NAME IS : ${CMAKE_SYSTEM_NAME}")
 if(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
-    set(LINUX_BUILD ON)
+  set(LINUX_BUILD ON)
 elseif(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
-    set(MACOS_BUILD ON)
+  set(MACOS_BUILD ON)
 elseif(${CMAKE_SYSTEM_NAME} MATCHES "Windows" AND MINGW)
-    set(WINDOWS_BUILD ON)
+  set(WINDOWS_BUILD ON)
 else()
-    message(FATAL_ERROR
+  message(FATAL_ERROR
 "The build is only configured for Linux, Windows(MINGW), and Darwin(Macos)."
-    )
+  )
 endif()
 #XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX#
 #---------- SECTION 1.0  PROJECT OPTIONS ------------#
@@ -80,10 +80,10 @@ set(BUILD_SHARED_LIBS ON)
 set(CMAKE_EXE_LINKER_FLAGS "-static-libstdc++ -static-libgcc")
 set(CMAKE_SHARED_LINKER_FLAGS  "-static-libstdc++ -static-libgcc") 
 if(MINGW)
-    # set(CMAKE_SHARED_LINKER_FLAGS  "${CMAKE_SHARED_LINKER_FLAGS} -Wl,--allow-multiple-definition -Wl,-Bstatic,--whole-archive -lpthread  -Wl,-Bdynamic,--no-whole-archive")
-    # set(CMAKE_EXE_LINKER_FLAGS  "${CMAKE_SHARED_LINKER_FLAGS} -Wl,--allow-multiple-definition -Wl,-Bstatic,--whole-archive -lpthread  -Wl,-Bdynamic,--no-whole-archive")
-    set(CMAKE_SHARED_LINKER_FLAGS  "${CMAKE_SHARED_LINKER_FLAGS} -Wl,--allow-multiple-definition -static -lpthread") 
-    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,--allow-multiple-definition -static -lpthread")
+  # set(CMAKE_SHARED_LINKER_FLAGS  "${CMAKE_SHARED_LINKER_FLAGS} -Wl,--allow-multiple-definition -Wl,-Bstatic,--whole-archive -lpthread  -Wl,-Bdynamic,--no-whole-archive")
+  # set(CMAKE_EXE_LINKER_FLAGS  "${CMAKE_SHARED_LINKER_FLAGS} -Wl,--allow-multiple-definition -Wl,-Bstatic,--whole-archive -lpthread  -Wl,-Bdynamic,--no-whole-archive")
+  set(CMAKE_SHARED_LINKER_FLAGS  "${CMAKE_SHARED_LINKER_FLAGS} -Wl,--allow-multiple-definition -static -lpthread") 
+  set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,--allow-multiple-definition -static -lpthread")
 endif(MINGW)
 # The Find<Package>.cmake file are located here
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${PROJECT_SOURCE_DIR}/config/cmake)
@@ -94,23 +94,23 @@ option(CMAKE_FF_CXX "Include the pure CXX lapkt extensions to support usage of F
 
 option(CMAKE_FF_PYWRAPPER "Include a python wrapper over CXX FF extension" OFF)
 if(CMAKE_FF_PYWRAPPER AND NOT CMAKE_FF_CXX)
-    message(FATAL_ERROR "CMAKE_FF_CXX must be ON to install FF py extensions")
+  message(FATAL_ERROR "CMAKE_FF_CXX must be ON to install FF py extensions")
 endif()
 
 option(CMAKE_LEGACY_PLANNER "Old is gold! Build some legacy pure CXX planners" OFF)
 if(CMAKE_LEGACY_PLANNER AND NOT CMAKE_FF_CXX)
-    message(FATAL_ERROR "CMAKE_FF_CXX must be ON to install legacy planners")
+  message(FATAL_ERROR "CMAKE_FF_CXX must be ON to install legacy planners")
 endif()
 
-# Install FD translate and include the wrapper over it which
+# Install FD pddl and include the wrapper over it which
 #   acts as a pipe between output of FD tarnslate and lapkt
-option(CMAKE_FD "Install FD translate" OFF)
+option(CMAKE_FD "Install FD pddl" OFF)
 
 # Builds a wrapper over lapkt library and installs a python module which 
 # handles the intregration of Tarski grounder and lapkt library
 option(CMAKE_TARSKI "Build and install the extension for tarski" ON)
 
-# Create Sphinx Docs (Translated from Doxygen XML)
+# Create Sphinx Docs (pddld from Doxygen XML)
 option(CMAKE_SPHINX_DOCS "CMAKE_SPHINX_DOCS" OFF)
 
 # Create Doxygen html Docs
@@ -122,8 +122,8 @@ option(CMAKE_DOXYGEN_DOCS "CMAKE_DOXYGEN_DOCS" OFF)
 
 #---- SECTION 1.2 CUSTOM METHODS ----#
 function(cat FROM TO)
-    file(READ ${FROM} CONTENTS)
-    file(APPEND ${TO} "${CONTENTS}")
+  file(READ ${FROM} CONTENTS)
+  file(APPEND ${TO} "${CONTENTS}")
 endfunction()
 
 #XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX#
@@ -139,14 +139,13 @@ endfunction()
 # endif()
 find_package(Python3 COMPONENTS Interpreter Development)
 if(${Python3_VERSION} VERSION_LESS 3.7.0)
-    message(SEND_ERROR 
-        "UNTESTED PYTHON VERSION, expected >3.7.x but found - " ${Python3_VERSION})
+  message(SEND_ERROR 
+    "UNTESTED PYTHON VERSION, expected >3.7.x but found - " ${Python3_VERSION})
 endif()
 
 message("The PYTHON_VERSION is ${Python3_VERSION_MAJOR}.${Python3_VERSION_MINOR}")
 
 #---- Boost ----#
-
 # LOGS
 message(STATUS "BOOST_ROOT is set to ${BOOST_ROOT}")
 message(STATUS "BOOST_INCLUDEDIR is set to ${BOOST_INCLUDEDIR}")
@@ -158,8 +157,8 @@ set(Boost_DEBUG ON)
 # Link with static Boost libraries instead of dynamic
 option(CMAKE_STATIC_BOOST "Link with boost-c++ static libraries" ON)
 if(CMAKE_STATIC_BOOST)
-    set(Boost_USE_STATIC_LIBS ON)
-    set(BOOST_PYTHON_STATIC_LIB ON)
+  set(Boost_USE_STATIC_LIBS ON)
+  set(BOOST_PYTHON_STATIC_LIB ON)
 endif(CMAKE_STATIC_BOOST)
 
 message(STATUS "Boost_USE_STATIC_LIBS is ${Boost_USE_STATIC_LIBS}")
@@ -169,7 +168,14 @@ message(STATUS "BOOST_PYTHON_STATIC_LIB is ${BOOST_PYTHON_STATIC_LIB}")
 # set(BOOST_INCLUDEDIR ${BOOST_ROOT}/include)
 # set(BOOST_LIBRARYDIR ${BOOST_ROOT}/lib)
 # set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "C:/Boost/lib/cmake/Boost-1.78.0")
-find_package(Boost REQUIRED COMPONENTS program_options  python${Python3_VERSION_MAJOR}${Python3_VERSION_MINOR})
+list(APPEND Boost_Required_Components
+  program_options
+  random
+)
+if(NOT PYBIND11_NOBOOST)
+  list(APPEND Boost_Required_Components python${Python3_VERSION_MAJOR}${Python3_VERSION_MINOR})
+endif()
+find_package(Boost REQUIRED COMPONENTS program_options ${Boost_Required_Components})
 message("THE BOOST INCLUDE dirs search path is " ${Boost_INCLUDE_DIRS} )
 
 #---- Catch2 ----#
@@ -178,16 +184,16 @@ find_package(Catch2 3 REQUIRED PATHS ${CATCH2_ROOT} NO_DEFAULT_PATH)
 #[[ Alternative FetchContent method to add Catch2 targets to the build
 Include(FetchContent)
 FetchContent_Declare(
-    Catch2
-    GIT_REPOSITORY https://github.com/catchorg/Catch2.git
-    GIT_TAG        v3.0.0-preview4
+  Catch2
+  GIT_REPOSITORY https://github.com/catchorg/Catch2.git
+  GIT_TAG        v3.0.0-preview4
 )
 FetchContent_MakeAvailable(Catch2)
 list(APPEND CMAKE_MODULE_PATH ${catch2_SOURCE_DIR}/extras)
 ]]
 
 if(CMAKE_TESTING_ENABLED)
-    enable_testing()
+  enable_testing()
 endif()
 #XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX#
 #------ SECTION 3.0  lapkt LIBRARIES and DOCS -------#
@@ -198,11 +204,11 @@ endif()
 # lapkt cxx library
 set(REL_LAPKT_ROOT lapkt)
 set(REL_CMAKE_DIR ${REL_LAPKT_ROOT}/cmake)
-# core and py_extension component
+# core and planner component
 set(REL_CORE_LIB_DIR ${REL_LAPKT_ROOT}/core/lib)
 set(REL_CORE_INC_DIR ${REL_LAPKT_ROOT}/core/include)
-set(REL_PYEXT_LIB_DIR ${REL_LAPKT_ROOT}/extension/lib)
-set(REL_PYEXT_INC_DIR ${REL_LAPKT_ROOT}/extension/include)
+set(REL_PYEXT_LIB_DIR ${REL_LAPKT_ROOT}/core/lib)
+set(REL_PYEXT_INC_DIR ${REL_LAPKT_ROOT}/core/include)
 # pypi package
 set(REL_PYPI_ROOT pypi_release)
 set(REL_PYPI_LAPKT_ROOT ${REL_PYPI_ROOT}/package/lapkt)
@@ -235,28 +241,56 @@ add_subdirectory(config/cmake/InstallPythonPackage)
 add_library(core SHARED)
 
 # set_target_properties(core PROPERTIES
-      ##### CHECK IT - Doesn't work in Windows(MINGW)
-#     LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/${REL_CORE_LIB_DIR}
+#     #### CHECK IT - Doesn't work in Windows(MINGW)
+#   LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/${REL_CORE_LIB_DIR}
 # )
 
-#---- py_extension - python extensions ----#
+#---- Python extensions ----#
 
-# add_library(py_extension SHARED)
-# if(NOT WINDOWS_BUILD)
-#     set_target_properties(py_extension PROPERTIES
-#         INSTALL_RPATH "${CMAKE_INSTALL_RPATH}:$ORIGIN/../../core/lib"
-#     )
-# endif(WINDOWS_BUILD)
+#---- Translate PDDL ----#
+add_library(pddl SHARED)
+set_target_properties(pddl PROPERTIES
+  PREFIX ""
+)
+if(NOT WINDOWS_BUILD)
+  set_target_properties(pddl PROPERTIES
+    INSTALL_RPATH "${CMAKE_INSTALL_RPATH}:$ORIGIN"
+  )
+endif(NOT WINDOWS_BUILD)
 
-# target_include_directories(py_extension
-#     PRIVATE
-#         ${Python3_INCLUDE_DIRS} 
-#         ${Boost_INCLUDE_DIRS}
-# )
+target_include_directories(pddl
+  PRIVATE
+    ${Python3_INCLUDE_DIRS} 
+    ${Boost_INCLUDE_DIRS}
+)
 
-# target_link_libraries(py_extension PRIVATE
-#     core
-# )
+target_link_libraries(pddl PRIVATE
+  core
+  ${Boost_LIBRARIES}
+)
+
+#---- Planner ----#
+add_library(planner SHARED)
+set_target_properties(planner PROPERTIES
+  PREFIX ""
+)
+if(NOT WINDOWS_BUILD)
+  set_target_properties(planner PROPERTIES
+    INSTALL_RPATH "${CMAKE_INSTALL_RPATH}:$ORIGIN"
+  )
+endif(NOT WINDOWS_BUILD)
+
+target_include_directories(planner
+  PRIVATE
+    ${Python3_INCLUDE_DIRS} 
+    ${Boost_INCLUDE_DIRS}
+)
+
+target_link_libraries(planner PRIVATE
+  core
+  pddl
+  ${Boost_LIBRARIES}
+)
 
 #---- Add sub directories with source ----#
 
@@ -270,37 +304,53 @@ add_subdirectory(test)
 
 # core
 install(TARGETS core 
-    EXPORT lapkt-core-Targets
-    DESTINATION ${REL_CORE_LIB_DIR}
-    COMPONENT lapkt
-    INCLUDES DESTINATION
-        ${REL_CORE_INC_DIR}
+  EXPORT lapkt-core-Targets
+  DESTINATION ${REL_CORE_LIB_DIR}
+  COMPONENT lapkt
+  INCLUDES DESTINATION
+    ${REL_CORE_INC_DIR}
 )
 # Allows the developers to use find_package(lapkt COMPONENT core) 
 #   to link lapkt library from their cmake project
 install(
-    EXPORT      lapkt-core-Targets
-    FILE        lapkt-core-Targets.cmake
-    DESTINATION ${REL_CMAKE_DIR}
-    COMPONENT lapkt
+  EXPORT      lapkt-core-Targets
+  FILE        lapkt-core-Targets.cmake
+  DESTINATION ${REL_CMAKE_DIR}
+  COMPONENT lapkt
 )
 
-# # py_extension
-# install(TARGETS py_extension
-#     EXPORT lapkt-py_extension-Targets
-#     LIBRARY DESTINATION ${REL_PYEXT_LIB_DIR}
-#     COMPONENT lapkt    
-#     INCLUDES DESTINATION    
-#         ${REL_PYEXT_INC_DIR}
-# )
-# # Allows the developers to use find_package(lapkt COMPONENT py_extension) 
-# #   to link lapkt library from their cmake project
-# install(
-#     EXPORT      lapkt-py_extension-Targets
-#     FILE        lapkt-py_extension-Targets.cmake
-#     DESTINATION ${REL_CMAKE_DIR}
-#     COMPONENT lapkt
-# )
+# planner
+install(TARGETS planner
+  EXPORT lapkt-planner-Targets
+  LIBRARY DESTINATION ${REL_PYEXT_LIB_DIR}
+  COMPONENT lapkt    
+  INCLUDES DESTINATION    
+    ${REL_PYEXT_INC_DIR}
+)
+# Allows the developers to use find_package(lapkt COMPONENT planner) 
+#   to link lapkt library from their cmake project
+install(
+  EXPORT      lapkt-planner-Targets
+  FILE        lapkt-planner-Targets.cmake
+  DESTINATION ${REL_CMAKE_DIR}
+  COMPONENT lapkt
+)
+# pddl
+install(TARGETS pddl
+  EXPORT lapkt-pddl-Targets
+  LIBRARY DESTINATION ${REL_PYEXT_LIB_DIR}
+  COMPONENT lapkt    
+  INCLUDES DESTINATION    
+    ${REL_PYEXT_INC_DIR}
+)
+# Allows the developers to use find_package(lapkt COMPONENT pddl) 
+#   to link lapkt library from their cmake project
+install(
+  EXPORT      lapkt-pddl-Targets
+  FILE        lapkt-pddl-Targets.cmake
+  DESTINATION ${REL_CMAKE_DIR}
+  COMPONENT lapkt
+)
 
 #XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX#
 #----------- SECTION 4.0  INSTALL CONFIG ------------#
@@ -310,33 +360,33 @@ install(
 
 ## Allow developers using the lapkt library to fetch information, including library version
 configure_file(${PROJECT_SOURCE_DIR}/config/cmake/lapkt_cmake_config.h.in 
-    lapkt_cmake_config.h
+  lapkt_cmake_config.h
 )
 
 install(FILES "${PROJECT_BINARY_DIR}/lapkt_cmake_config.h"
-    DESTINATION ${REL_CORE_INC_DIR}
-    COMPONENT lapkt 
+  DESTINATION ${REL_CORE_INC_DIR}
+  COMPONENT lapkt 
 )
 include(CMakePackageConfigHelpers)
 # generate the config file that includes the exports
 configure_package_config_file(${PROJECT_SOURCE_DIR}/config/cmake/Config.cmake.in
-    ${PROJECT_BINARY_DIR}/${REL_CMAKE_DIR}/lapktConfig.cmake
-    INSTALL_DESTINATION ${REL_CMAKE_DIR}
-    # NO_SET_AND_CHECK_MACRO
-    # NO_CHECK_REQUIRED_COMPONENTS_MACRO
-    # PATH_VARS INCLUDE_INSTALL_DIR 
+  ${PROJECT_BINARY_DIR}/${REL_CMAKE_DIR}/lapktConfig.cmake
+  INSTALL_DESTINATION ${REL_CMAKE_DIR}
+  # NO_SET_AND_CHECK_MACRO
+  # NO_CHECK_REQUIRED_COMPONENTS_MACRO
+  # PATH_VARS INCLUDE_INSTALL_DIR 
 )
 # generate the version file for the config file
 write_basic_package_version_file(
-    "${PROJECT_BINARY_DIR}/${REL_CMAKE_DIR}/lapktConfigVersion.cmake"
+  "${PROJECT_BINARY_DIR}/${REL_CMAKE_DIR}/lapktConfigVersion.cmake"
   VERSION "${lapkt_VERSION_MAJOR}.${lapkt_VERSION_MINOR}"
   COMPATIBILITY AnyNewerVersion
 ) 
 install(FILES
-    ${PROJECT_BINARY_DIR}/${REL_CMAKE_DIR}/lapktConfig.cmake
-    ${PROJECT_BINARY_DIR}/${REL_CMAKE_DIR}/lapktConfigVersion.cmake
-    DESTINATION ${REL_CMAKE_DIR}
-    COMPONENT lapkt
+  ${PROJECT_BINARY_DIR}/${REL_CMAKE_DIR}/lapktConfig.cmake
+  ${PROJECT_BINARY_DIR}/${REL_CMAKE_DIR}/lapktConfigVersion.cmake
+  DESTINATION ${REL_CMAKE_DIR}
+  COMPONENT lapkt
 )
 
 #---- SECTION 4.2 CPACK CONFIGURATIOn
@@ -352,10 +402,10 @@ install(FILES
 #XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX#
 
 install(DIRECTORY
-    ${CMAKE_INSTALL_PREFIX}/${REL_LAPKT_ROOT}/
-    USE_SOURCE_PERMISSIONS
-    DESTINATION ${REL_PYPI_LAPKT_ROOT}
-    COMPONENT PYPACKAGE EXCLUDE_FROM_ALL 
+  ${CMAKE_INSTALL_PREFIX}/${REL_LAPKT_ROOT}/
+  USE_SOURCE_PERMISSIONS
+  DESTINATION ${REL_PYPI_LAPKT_ROOT}
+  COMPONENT PYPACKAGE EXCLUDE_FROM_ALL 
 )
 
 # The script will run during the installation(We want this at the bottom of all install target)
