--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,7 +2,7 @@
 #----- Project Source -----#
 
 # Translate PDDL input (leverages external libraries, including tarski)
-# add_subdirectory(translate)
+add_subdirectory(translate)
 
 # Search engines 
 add_subdirectory(engine)
@@ -20,13 +20,13 @@ add_subdirectory(model)
 add_subdirectory(utility)
 
 # Planners which leverage engine(s) in some particular configuration
-# add_subdirectory(planner)
+add_subdirectory(planner)
 
 # Frontend scripts
 add_subdirectory(script)
 
 #----- legacy lapkt-ff executables -----#
-# if(CMAKE_LEGACY_PLANNER)
-#     set(CMAKE_FF_CXX ON)
-#     add_subdirectory(legacy_ff_planner)
-# endif(CMAKE_LEGACY_PLANNER)
+if(CMAKE_LEGACY_PLANNER)
+    set(CMAKE_FF_CXX ON)
+    add_subdirectory(legacy_ff_planner)
+endif(CMAKE_LEGACY_PLANNER)
