--- a/src/planner/wrapper/CMakeLists.txt
+++ b/src/planner/wrapper/CMakeLists.txt
@@ -1,4 +1,11 @@
-target_sources(py_extension
-    PRIVATE
-        module.cxx
-)
+if(NOT PYBIND11_NOBOOST)
+    target_sources(planner
+        PRIVATE
+            boostpy_module.cxx
+    )
+else()
+    target_sources(planner
+        PRIVATE
+            pybind11_module.cxx
+    )
+endif()
