--- a/src/translate/pddl/wrapper/CMakeLists.txt
+++ b/src/translate/pddl/wrapper/CMakeLists.txt
@@ -1,26 +1,49 @@
 # Add the wrapper class to lapkt
 
-target_sources(py_extension
+if(NOT PYBIND11_NOBOOST)
+    target_sources(pddl
+        PRIVATE
+            boostpy_strips_interface.cxx
+            boostpy_strips_interface.hxx
+    )
+
+    target_sources(pddl
+        PRIVATE
+            boostpy_module.cxx
+    )
+
+    install(
+        FILES
+            ${PROJECT_SOURCE_DIR}/src/translate/pddl/wrapper/boostpy_strips_interface.hxx
+        DESTINATION
+            ${CMAKE_INSTALL_PREFIX}/${REL_CORE_INC_DIR}/extension
+        COMPONENT
+            lapkt EXCLUDE_FROM_ALL
+    )
+else()
+    target_sources(pddl
     PRIVATE
-        py_strips_interface.cxx
-        py_strips_interface.hxx
-)
-target_include_directories(py_extension
+        pybind11_strips_interface.cxx
+        pybind11_strips_interface.hxx
+    )
+
+    target_sources(pddl
+    PRIVATE
+        pybind11_module.cxx
+    )
+
+    install(
+    FILES
+        ${PROJECT_SOURCE_DIR}/src/translate/pddl/wrapper/pybind11_strips_interface.hxx
+    DESTINATION
+        ${CMAKE_INSTALL_PREFIX}/${REL_CORE_INC_DIR}/extension
+    COMPONENT
+        lapkt EXCLUDE_FROM_ALL
+    )
+endif(NOT PYBIND11_NOBOOST)
+
+
+target_include_directories(pddl
     PUBLIC
         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
 )
-
-target_sources(py_extension
-    PRIVATE
-        module.cxx
-)
-
-install(
-    FILES
-        ${PROJECT_SOURCE_DIR}/src/translate/pddl/wrapper/py_strips_interface.hxx
-    DESTINATION
-        ${CMAKE_INSTALL_PREFIX}/lapkt/extension/include/
-    COMPONENT
-        lapkt EXCLUDE_FROM_ALL
-)
-
