--- a/src/planner/iw_plus/CMakeLists.txt
+++ b/src/planner/iw_plus/CMakeLists.txt
@@ -1,13 +1,13 @@
-target_sources(py_extension
+target_sources(planner
     PRIVATE
         rp_iw_planner.cxx
         # rp_iw_planner.hxx
 )
 
-target_include_directories(py_extension
+target_include_directories(planner
     PRIVATE
         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
 )
 cat(${CMAKE_CURRENT_SOURCE_DIR}/planner_config.yml 
-    ${PROJECT_BINARY_DIR}/pypi_release/package/lapkt/config/lapkt_planner_config.yml
+    ${PROJECT_BINARY_DIR}/${REL_PYPI_LAPKT_ROOT}/planner/lapkt_planner_config.yml
 )
