--- a/src/planner/siw_plus/planner_config.yml
+++ b/src/planner/siw_plus/planner_config.yml
@@ -20,9 +20,9 @@ SIW_Plus_Planner:
       nargs   : '?'
       action  : 'store'
       help    : 'log file name'
-    # 'var_name' is the name of interface (in module.cxx) 
+    # 'var_name' is the name of interface (in boostpy_module.cxx) 
     #     via which a config value is stored into cpp variable.
-    # 'fun_name' is the name of a setter (in module.cxx) 
+    # 'fun_name' is the name of a setter (in boostpy_module.cxx) 
     #     which pushes exactly 1 (String/numeric) value.
     var_name: 'log_filename'   
   plan_file: 
