--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,8 @@
 
 #----- Project Source -----#
 
+add_subdirectory(wrapper)
+
 # Translate PDDL input (leverages external libraries, including tarski)
 add_subdirectory(translate)
 
