--- a/src/wrapper/CMakeLists.txt
+++ b/src/wrapper/CMakeLists.txt
@@ -1,40 +1,36 @@
 # Add the wrapper class to lapkt
 
 if(NOT PYBIND11_NOBOOST)
-    target_sources(pddl
+    target_sources(wrapper
         PRIVATE
+            # boostpy_module.cxx
             boostpy_strips_interface.cxx
             boostpy_strips_interface.hxx
     )
 
-    target_sources(pddl
-        PRIVATE
-            boostpy_module.cxx
-    )
-
     install(
         FILES
-            ${PROJECT_SOURCE_DIR}/src/translate/pddl/wrapper/boostpy_strips_interface.hxx
+            boostpy_strips_interface.hxx
         DESTINATION
             ${CMAKE_INSTALL_PREFIX}/${REL_CORE_INC_DIR}/extension
         COMPONENT
             lapkt EXCLUDE_FROM_ALL
     )
 else()
-    target_sources(pddl
+    target_sources(wrapper
     PRIVATE
         pybind11_strips_interface.cxx
         pybind11_strips_interface.hxx
     )
 
-    target_sources(pddl
+    target_sources(wrapper
     PRIVATE
         pybind11_module.cxx
     )
 
     install(
     FILES
-        ${PROJECT_SOURCE_DIR}/src/translate/pddl/wrapper/pybind11_strips_interface.hxx
+        pybind11_strips_interface.hxx
     DESTINATION
         ${CMAKE_INSTALL_PREFIX}/${REL_CORE_INC_DIR}/extension
     COMPONENT
@@ -42,8 +38,7 @@ else()
     )
 endif(NOT PYBIND11_NOBOOST)
 
-
-target_include_directories(pddl
+target_include_directories(wrapper
     PUBLIC
         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
 )
