--- a/src/planner/CMakeLists.txt
+++ b/src/planner/CMakeLists.txt
@@ -3,18 +3,18 @@ file(WRITE ${PROJECT_BINARY_DIR}/${REL_PYPI_LAPKT_ROOT}/planner/lapkt_planner_co
 
 add_subdirectory(pybinding)
 add_subdirectory(anytime_lapkt)
-add_subdirectory(at_bfs_f)
-add_subdirectory(bfs_f)
-add_subdirectory(brfs)
-add_subdirectory(bfws)
-add_subdirectory(delete-free-iw)
-add_subdirectory(delete-free-siw)
-add_subdirectory(dfs_plus)
-add_subdirectory(iw)
-add_subdirectory(iw_plus)
-add_subdirectory(siw)
-add_subdirectory(siw_plus)
-add_subdirectory(siw_plus-then-bfs_f)
+# add_subdirectory(at_bfs_f)
+# add_subdirectory(bfs_f)
+# add_subdirectory(brfs)
+# add_subdirectory(bfws)
+# add_subdirectory(delete-free-iw)
+# add_subdirectory(delete-free-siw)
+# add_subdirectory(dfs_plus)
+# add_subdirectory(iw)
+# add_subdirectory(iw_plus)
+# add_subdirectory(siw)
+# add_subdirectory(siw_plus)
+# add_subdirectory(siw_plus-then-bfs_f)
 
 target_include_directories(planner
     PUBLIC
